--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,7 @@ jobs:
       uses: Azure/aks-set-context@v1.1
       with:
         # Azure credentials i.e. output of `az ad sp create-for-rbac --sdk-auth`
-        creds: ${{ secrets.AZURE_CREDENTIALS }} 
+        creds: mqQLbr9e0wwHnaEHM/AVaD2uMqvgdmXd
         # Resource Group Name
         resource-group: CloudNativeRG
         # AKS Cluster Name
